# diesel-odbc

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: actions.rs  company_test.rs  lib.rs  main.rs  models.rs  sales.rs  sales_main.rs  sales_test.rs  schema.rs  test_odbc.rs
src/data-model/: Cargo.toml
src/data-model/src/: build.rs  lib.rs  models.rs  schema.rs
src/getting_started_step_1/: Cargo.toml
src/getting_started_step_1/src/: models.rs
src/odbc/: backend.rs  mod.rs  utility.rs  value.rs
src/odbc/connection/: bind.rs  diagnostics.rs  mod.rs  raii.rs  raw.rs  raw_conn.rs  result.rs  url.rs
src/odbc/connection/environment/: list_data_sources.rs  mod.rs
src/odbc/connection/statement/: bind.rs  input.rs  metadata.rs  mod.rs  output.rs  prepare.rs  statement_iterator.rs  types.rs
src/odbc/connection/stmt/: iterator.rs  metadata.rs  mod.rs
src/odbc/query_builder/: limit_offset.rs  mod.rs  query_fragment_impls.rs
src/odbc/types/: date_and_time.rs  json.rs  mod.rs  numeric.rs  primitives.rs
