[package]
name = "diesel-odbc"
version = "1.0.0"
authors = [
  "Nikolay Kim <fafhrd91@gmail.com>",
  "Rob Ede <robjtede@icloud.com>",
]
edition = "2018"

[[bin]]
name = "test_odbc"
path = "src/test_odbc.rs"
doc = false


[[bin]]
name = "main_odbc"
path = "src/sales_main.rs"
doc = false


[lib]
path = "src/lib.rs"
doc = false

[dependencies]
byteorder = "1.0"
bitflags = { version = "1.2.0", optional = false }
#chrono = {version="0.4.19", path="D:/Rust/chrono", optional=true}
chrono = { git="https://github.com/chronotope/chrono", optional = true, default-features = false, features = ["clock", "std"] }

libc = { version = "0.2.0", optional = true }
#libsqlite3-sys = { version = ">=0.8.0, <0.21.0", optional = true, features = ["min_sqlite_version_3_7_16"] }
#mysqlclient-sys = { version = "0.2.0", optional = false}
percent-encoding = { version = "2.1.0", optional = false }
actix-web = "3"
diesel = {path = "D:/Rust/diesel/diesel", features = ["mysql", "r2d2","chrono","numeric", "100-column-tables"] }
#diesel = {git = "https://github.com/unitsoftrover/diesel", branch="dev", features = ["mysql", "r2d2","chrono","numeric", "100-column-tables"] }
dotenv = "0.15"
env_logger = "0.7"
failure = "0.1.8"
futures = "0.3.1"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
num-bigint = { version = ">=0.2.0, <0.4.0", optional = true }
num-traits = { version = "0.2.0", optional = true }
num-integer = { version = "0.1.39", optional = true }
bigdecimal = { version = ">=0.0.13, < 0.3.0", optional = true }

odbc-sys = {version="0.8.2", path="D:/Rust/web/odbc-sys-0.8.2"}
odbc-safe = {version="0.5.0", path="D:/Rust/web/odbc-safe-0.5.0"}
log = "0.4.1"
encoding_rs = "0.8.14"
doc-comment = "0.3.1"
url = "1.7"
lazy_static = "1.4.0"

[dependencies.diesel_derives]
version = "~2.0.0"
#git = "https://github.com/unitsoftrover/diesel"
#branch="dev"
path = "D:/Rust/diesel/diesel_derives"

[dev-dependencies]
#chrono = "0.4"
env_logger = "0.7"

[features]
default = ["diesel_derives/mysql", "chrono", "numeric"]
numeric = ["bigdecimal", "num-bigint", "num-traits", "num-integer"]

[profile.dev]
opt-level = 0 # 控制编译器的 --opt-level 参数，也就是优化参数
debug = true # 控制编译器是否开启 `-g` 参数
rpath = false # 控制编译器的 `-C rpath` 参数
lto = false # 控制`-C lto` 参数，此参数影响可执行文件和静态库的生成，
debug-assertions = true # 控制调试断言是否开启
codegen-units = 64 # 控制编译器的 `-C codegen-units` 参数。注意，当`lto = true`时，此字段值被忽略
# 发布模板, 对应`cargo build --release`命令
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
# 测试模板，对应`cargo test`命令
[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
# 性能评估模板，对应`cargo bench`命令
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
