[package]
name = "data-model"
version = "1.0.0"
authors = []
edition = "2018"

[lib]
path = "src/lib.rs"
doc = false

[dependencies]
chrono = { git="https://github.com/chronotope/chrono", optional = true, default-features = false, features = ["clock", "std"] }
diesel = {path = "D:/Rust/diesel/diesel", features = ["mysql", "r2d2","chrono","numeric", "100-column-tables"] }
#diesel = {git = "https://github.com/unitsoftrover/diesel", branch="dev", features = ["mysql", "r2d2","chrono","numeric", "100-column-tables"] }
num-bigint = { version = ">=0.2.0, <0.4.0", optional = true }
num-traits = { version = "0.2.0", optional = true }
num-integer = { version = "0.1.39", optional = true }
bigdecimal = { version = ">=0.0.13, < 0.3.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

[features]
default = ["chrono", "numeric"]
numeric = ["bigdecimal", "num-bigint", "num-traits", "num-integer"]
