[workspace]

[package]
name = "data_model"
version = "1.0.0"
authors = []
edition = "2018"
# build="src/build.rs"
# [build-dependencies]
# dunce = "0.1.1"

[lib]
path = "src/lib.rs"
doc = false

[dependencies]
diesel = {path = "../../../diesel/diesel", features = ["numeric",  "100-column-tables"] }#"mysql", 
dotenv = "0.15"
chrono = {git="https://github.com/chronotope/chrono", optional = true, default-features = false, features = ["clock", "std"] }
num-bigint = { version = "0.4.0", optional = true }
num-traits = { version = "0.2.0", optional = true }
num-integer = { version = "0.1.39", optional = true }
bigdecimal = { version = "0.3.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

#[dependencies.diesel_derives]
#version = "~2.0.0"
##git = "https://github.com/unitsoftrover/diesel"
##branch="dev"
#path = "../../../../diesel/diesel_derives"

[features]
default = ["chrono", "numeric"]
numeric = ["num-bigint", "bigdecimal", "num-traits", "num-integer"]

